# pj-b-research-prompt-injection-attack

./: README.md  pipeline.ipynb  pyproject.toml
data/llm_output/gemini-1.5-flash/combined-attack/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/llm_output/gemini-1.5-flash/context-ignoring/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/llm_output/gemini-1.5-flash/escape-characters/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/llm_output/gemini-1.5-flash/fake-completion/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/llm_output/gemini-1.5-flash/naive-attack/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/llm_output/gemini-1.5-pro/combined-attack/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  (+1 more)
data/prompt_output/combined-attack/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/prompt_output/context-ignoring/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/prompt_output/escape-characters/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/prompt_output/fake-completion/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
data/prompt_output/naive-attack/: NLI_NLI_100.csv  NLI_SA_100.csv  SA_NLI_100.csv  SA_SA_100.csv
output/gemini-1.5-flash/: gemini-1.5-flash.csv
src/defence/: prevent_attack.py
src/evaluator/: task_evaluator.py
src/evaluator/attack_benchmark/: asv.py  mr.py  pna.py
src/llm_processor/: llm.py  llm_processor.py
src/prompt_creator/: create_prompt.py
(+16 files in other folders)
