[tool.poetry]
name = "pj-b-research-prompt-injection-attack"
version = "0.1.0"
description = ""
authors = ["j.sato <Joichiro.20040102@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
